objects/Pull_Request__c.object
<CustomObject>
    <fields>
        <fullName>Assignees__c</fullName>
        <label>Assignees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_Files__c</fullName>
        <description>The number of files changed in the pull request</description>
        <label>Changed Files</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_At__c</fullName>
        <description>The date when the pull request was closed or empty if it is not closed</description>
        <label>Closed At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commits__c</fullName>
        <description>The number of commits in the pull request</description>
        <label>Commits</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mergeable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mergeable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Merged_At__c</fullName>
        <description>The date when the pull request was merged or empty if it is not merged</description>
        <label>Merged At</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Merged_By__c</fullName>
        <description>The git hub username who merged the pull request</description>
        <label>Merged By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Merged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Number__c</fullName>
        <description>Pull Request Number</description>
        <label>Request Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_Reviewers__c</fullName>
        <label>Requested Reviewers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>The state of the pull request</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Branch__c</fullName>
        <description>The target branch of the pull request</description>
        <label>Target Branch</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Link__c</fullName>
        <formula>IF(
 ISBLANK(Url__c),
 &quot;&quot;,
 HYPERLINK(Url__c, &quot;Go to Review&quot;)
)</formula>
        <label>URL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <description>Pull Request Url</description>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Avatar_Url__c</fullName>
        <label>User Avatar Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Avatar__c</fullName>
        <formula>IMAGE(User_Avatar_Url__c, Username__c, 50, 50)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Avatar</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>Pull Requests</relationshipLabel>
        <relationshipName>Pull_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Pull Request</label>
    <nameField>
        <label>Pull Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pull Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>